# RemoteWindow

./: Cargo.toml  README.md  build.rs
src/: capture.rs  color.rs  compression.rs  config.rs  connection.rs  connection_handler.rs  cursor.rs  dxgi_capturer.rs  lib.rs  macos.rs  performance_track.rs  screen.rs  windows.rs
swift/: ScreenCaptureBridge.swift
